i18n: add zh translation for settings

--- a/src/i18n/locales/en/index.json
+++ b/src/i18n/locales/en/index.json
@@ -1,4 +1,4 @@
 {
-  "indexStart": "START",
-  "indexVersion": "Version {{version}}"
+  "cap_start": "START",
+  "typ_version": "Version {{version}}"
 }
