--- a/src/i18n/locales/zh/index.json
+++ b/src/i18n/locales/zh/index.json
@@ -1,4 +1,8 @@
 {
   "cap_start": "开始",
-  "typ_version": "版本{{version}}"
+  "typ_version": "版本 {{version}}",
+  "cap_settings": "设置",
+  "cap_about": "关于",
+  "cap_sponsor": "赞助作者",
+  "cap_github": "转到 GitHub 仓库"
 }
