--- a/src/i18n/locales/zh/settings.json
+++ b/src/i18n/locales/zh/settings.json
@@ -4,6 +4,8 @@
   "msg_game_map_invalid": "选择的布局文件无效。请检查格式。",
   "msg_update_interval_invalid": "该更新间隔数值无效。",
   "msg_border_thickness_invalid": "该辅助格线粗细数值无效。",
+  "msg_clear_all": "用户数据已删除。刷新页面以使变更生效。",
+  "msg_export_settings_succ": "设置已导出。查看浏览器下载目录以获取文件。",
   "typ_category_appearance": "外观",
   "lbl_lang": "语言",
   "typ_lang_helper": "控制当前的显示语言。",
@@ -19,5 +21,10 @@
   "lbl_game_map": "地图布局",
   "typ_game_map_helper": "控制游戏的周期表布局。布局文件使用 JSON 格式。",
   "lbl_update_interval": "刷新时间间隔",
-  "typ_update_interval_helper": "控制两个游戏刻之间的时间长度。"
+  "typ_update_interval_helper": "控制两个游戏刻之间的时间长度。",
+  "typ_category_misc": "杂项",
+  "lbl_export_settings": "导出设置...",
+  "typ_export_settings_helper": "使用 JSON 格式将应用设置保存至本地。",
+  "lbl_clear_all": "清除所有数据",
+  "typ_clear_all_helper": "删除所有已保存的设置与进度，然后重置应用。"
 }
