feat: add concurrency settings

--- a/src/i18n/locales/zh/settings.json
+++ b/src/i18n/locales/zh/settings.json
@@ -4,8 +4,9 @@
   "msg_game_map_invalid": "选择的布局文件无效。请检查格式。",
   "msg_update_interval_invalid": "该更新间隔数值无效。",
   "msg_border_thickness_invalid": "该辅助格线粗细数值无效。",
+  "msg_concurrency_invalid": "该线程数量无效。",
   "msg_clear_all": "用户数据已删除。刷新页面以使变更生效。",
-  "msg_export_settings_succ": "设置已导出。查看浏览器下载目录以获取文件。",
+  "msg_export_settings_succ": "设置已导出。使用浏览器的下载功能获取文件。",
   "typ_category_appearance": "外观",
   "lbl_lang": "语言",
   "typ_lang_helper": "控制当前的显示语言。",
@@ -23,6 +24,8 @@
   "lbl_update_interval": "刷新时间间隔",
   "typ_update_interval_helper": "控制两个游戏刻之间的时间长度。",
   "typ_category_misc": "杂项",
+  "lbl_concurrency": "并行性",
+  "typ_concurrency_helper": "控制游戏最多可使用的 Web Worker 数量。设为“ 0 ”以根据硬件配置自动选择。更高的数值通常意味着游戏准备能够更快速地进行，但该值过高可能导致应用无响应。",
   "lbl_export_settings": "导出设置...",
   "typ_export_settings_helper": "使用 JSON 格式将应用设置保存至本地。",
   "lbl_clear_all": "清除所有数据",
