--- a/src/i18n/locales/en/settings.json
+++ b/src/i18n/locales/en/settings.json
@@ -4,8 +4,9 @@
   "msg_game_map_invalid": "Invalid game map file. Please check your file format.",
   "msg_update_interval_invalid": "Invalid tick interval value.",
   "msg_border_thickness_invalid": "Invalid border thickness value.",
+  "msg_concurrency_invalid": "Invalid worker count value.",
   "msg_clear_all": "All user data purged. Refresh the app to take effect.",
-  "msg_export_settings_succ": "Settings exported. Check downloads for file.",
+  "msg_export_settings_succ": "Settings exported. Check browser downloads for exported file.",
   "typ_category_appearance": "Appearance",
   "lbl_lang": "Language",
   "typ_lang_helper": "Controls current display language.",
@@ -23,6 +24,8 @@
   "lbl_update_interval": "Update interval",
   "typ_update_interval_helper": "Controls the interval between two game ticks.",
   "typ_category_misc": "Misc",
+  "lbl_concurrency": "Concurrency",
+  "typ_concurrency_helper": "Controls the maximum number of Web Workers allowed to spawn. Set to '0' to decide based on hardware. A higher value often means quicker game preparation, but a value too large may render the app unresponsive.",
   "lbl_export_settings": "EXPORT SETTINGS...",
   "typ_export_settings_helper": "Save settings to a local file in JSON.",
   "lbl_clear_all": "CLEAR ALL DATA",
