feat: add customizable gestures

--- a/src/i18n/locales/en/settings.json
+++ b/src/i18n/locales/en/settings.json
@@ -2,9 +2,7 @@
   "cap_open_button": "Open file...",
   "msg_color_scheme_invalid": "Invalid color scheme file. Please check your file format.",
   "msg_game_map_invalid": "Invalid game map file. Please check your file format.",
-  "msg_update_interval_invalid": "Invalid tick interval value.",
-  "msg_border_thickness_invalid": "Invalid border thickness value.",
-  "msg_concurrency_invalid": "Invalid worker count value.",
+  "msg_int_expected": "Invalid value. Expected an integer.",
   "msg_clear_all": "All user data purged. Refresh the app to take effect.",
   "msg_export_settings_succ": "Settings exported. Check browser downloads for exported file.",
   "typ_category_appearance": "Appearance",
@@ -23,6 +21,12 @@
   "typ_game_map_helper": "Controls the in-game periodic table layout in JSON.",
   "lbl_update_interval": "Update interval",
   "typ_update_interval_helper": "Controls the interval between two game ticks.",
+  "lbl_swipe_threshold": "Swipe duration threshold",
+  "typ_swipe_threshold_helper": "Controls the minimal duration above which a dragging is considered a swipe.",
+  "lbl_swipe_delta_x": "Swipe horizontal offset threshold",
+  "typ_swipe_delta_x_helper": "Controls the minimal horizontal offset above which a dragging is considered a swipe.",
+  "lbl_swipe_delta_y": "Swipe vertical offset threshold",
+  "typ_swipe_delta_y_helper": "Controls the minimal vertical offset above which a dragging is considered a swipe.",
   "typ_category_misc": "Misc",
   "lbl_concurrency": "Concurrency",
   "typ_concurrency_helper": "Controls the maximum number of Web Workers allowed to spawn. Set to '0' to decide based on hardware. A higher value often means quicker game preparation, but a value too large may render the app unresponsive.",
