--- a/src/i18n/locales/zh/settings.json
+++ b/src/i18n/locales/zh/settings.json
@@ -23,6 +23,12 @@
   "typ_game_map_helper": "控制游戏的周期表布局。布局文件使用 JSON 格式。",
   "lbl_update_interval": "刷新时间间隔",
   "typ_update_interval_helper": "控制两个游戏刻之间的时间长度。",
+  "lbl_swipe_threshold": "滑动时长阈值",
+  "typ_swipe_threshold_helper": "控制将移动手势判定为滑动时，该手势需要持续的最短时长。",
+  "lbl_swipe_delta_x": "滑动水平位移阈值",
+  "typ_swipe_delta_x_helper": "控制将移动手势判定为滑动时，该手势在水平方向上需要产生的最小位移。",
+  "lbl_swipe_delta_y": "滑动垂直位移阈值",
+  "typ_swipe_delta_y_helper": "控制将移动手势判定为滑动时，该手势在垂直方向上需要产生的最小位移。",
   "typ_category_misc": "杂项",
   "lbl_concurrency": "并行性",
   "typ_concurrency_helper": "控制游戏最多可使用的 Web Worker 数量。设为“ 0 ”以根据硬件配置自动选择。更高的数值通常意味着游戏准备能够更快速地进行，但该值过高可能导致应用无响应。",
