feat: add nav to settings

--- a/src/i18n/locales/en/index.json
+++ b/src/i18n/locales/en/index.json
@@ -1,5 +1,5 @@
 {
-  "cap_start": "START",
+  "cap_start": "START GAME",
   "typ_version": "Version {{version}}",
   "cap_settings": "Settings",
   "cap_about": "About",
