--- a/src/i18n/locales/en/index.json
+++ b/src/i18n/locales/en/index.json
@@ -1,6 +1,7 @@
 {
-  "cap_start": "START",
   "typ_version": "Version {{version}}",
+  "cap_start": "START",
+  "cap_autoplay": "AUTOPLAY",
   "cap_settings": "Settings",
   "cap_about": "About",
   "cap_sponsor": "Sponsor (external)",
