feat: add feature switches, add nav to game and autoplay

--- a/src/i18n/locales/en/settings.json
+++ b/src/i18n/locales/en/settings.json
@@ -12,17 +12,15 @@
   "typ_category_appearance": "Appearance",
   "lbl_lang": "Language",
   "typ_lang_helper": "Controls current display language.",
-  "lbl_assistance_grid": "Assistance grid visibility",
-  "lbl_option_assistance_grid_visible": "Visible",
-  "lbl_option_assistance_grid_hidden": "Hidden",
-  "typ_assistance_grid_helper": "Controls whether to display an assistance grid in the background to remove some difficulties.",
-  "lbl_border_thickness": "Border thickness",
-  "typ_border_thickness_helper": "Controls thickness of borders around cells in pixels.",
-  "typ_category_gameplay": "Gameplay",
+  "lbl_assistance_grid": "Show assistance grid in the background",
+  "lbl_grid_line_thickness": "Assistance grid line thickness",
+  "typ_grid_line_thickness_helper": "Controls thickness of assistance grid line.",
+  "lbl_color_enabled": "Color cell background according to current color scheme",
   "lbl_color_scheme": "Color scheme",
-  "typ_color_scheme_helper": "Controls the color scheme of Periotris in JSON.",
+  "typ_color_scheme_helper": "Controls current color scheme.",
+  "typ_category_gameplay": "Gameplay",
   "lbl_game_map": "Game map layout",
-  "typ_game_map_helper": "Controls the in-game periodic table layout in JSON.",
+  "typ_game_map_helper": "Controls current in-game periodic table layout.",
   "lbl_update_interval": "Update interval",
   "typ_update_interval_helper": "Controls the interval between two game ticks.",
   "typ_category_control": "Control",
