i18n: update zh translation for settings

--- a/src/i18n/locales/zh/settings.json
+++ b/src/i18n/locales/zh/settings.json
@@ -6,9 +6,7 @@
   "cap_open_button": "打开文件...",
   "msg_color_scheme_invalid": "选择的主题文件无效。请检查格式。",
   "msg_game_map_invalid": "选择的布局文件无效。请检查格式。",
-  "msg_update_interval_invalid": "该更新间隔数值无效。",
-  "msg_grid_line_thickness_invalid": "该辅助格线粗细数值无效。",
-  "msg_concurrency_invalid": "该线程数量无效。",
+  "msg_int_expected": "输入的数值无效。请输入整数。",
   "msg_clear_all": "用户数据已删除。刷新页面以使变更生效。",
   "msg_export_settings_succ": "设置已导出。使用浏览器的下载功能获取文件。",
   "typ_category_appearance": "外观",
