--- a/src/i18n/locales/zh/autoplay.json
+++ b/src/i18n/locales/zh/autoplay.json
@@ -1,4 +1,5 @@
 {
+  "typ_p_portrait": "你的设备处于竖屏模式。切换至横屏模式以继续游戏。",
   "typ_h_not_started_intro": "欢迎来到 Periotris.js 自动演示模式",
   "typ_p_not_started_intro": "在自动演示模式中，系统将接管游戏输入，用户发出的按键与触屏手势无效。本次游玩将不计入历史。除了以上几点，自动演示模式与常规模式相同，并采用相同的用户自定义设置，包括地图、色彩主题和游戏速度。",
   "cap_home": "首页",
